--- a/analysis/01_analysis.Rmd
+++ b/analysis/01_analysis.Rmd
@@ -5,10 +5,28 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
+library(jsonlite)
+library(tidyr)
+library(stringr)
+library(dplyr)
 ```
 
 ```{r data preprocessing}
 # Data pre-processing
+
+files <- dir("sandbox-results")
+
+raw_data <- data_frame()
+for (f in files) {
+  jf <- paste("sandbox-results/",f,sep="")
+  jd <- fromJSON(paste(readLines(jf), collapse=""))
+  id <- as_data_frame(jd$answers$data$data) %>%
+    mutate(workerid = jd$WorkerId)
+  raw_data <- bind_rows(raw_data, id)
+}
+
+raw_data
 ```
 
 # Do proportion of choices match the frequency in the distribution
