--- a/analysis/01_analysis.Rmd
+++ b/analysis/01_analysis.Rmd
@@ -6,38 +6,141 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
+library(tidyverse)
+library(ggplot2)
 library(jsonlite)
 library(tidyr)
 library(stringr)
 library(dplyr)
+library(ggthemes)
+library(langcog)
 ```
 
 ```{r data preprocessing}
 # Data pre-processing
 
-files <- dir("sandbox-results")
+files <- dir("../../pilot_1_raw_data/production-results")
 
 raw_data <- data_frame()
 for (f in files) {
-  jf <- paste("sandbox-results/",f,sep="")
+  jf <- paste("../../pilot_1_raw_data/production-results/",f,sep="")
   jd <- fromJSON(paste(readLines(jf), collapse=""))
   id <- as_data_frame(jd$answers$data$data) %>%
     mutate(workerid = jd$WorkerId)
   raw_data <- bind_rows(raw_data, id)
 }
 
-raw_data
+data <- raw_data %>%
+  mutate(correct_target3 = ifelse(correct_target1 == 0 & correct_target2 == 0, 1, 0)) %>%
+  mutate(distribution = as.character(distribution),
+         distribution = factor(distribution, levels = c("c(6, 0, 0)", "c(4, 2, 0)", "c(2, 2, 2)")),
+         pick = ifelse(pickPos == "item_l", item_l, ifelse(pickPos == "item_r", item_r, ifelse(pickPos=="item_m", item_m, NA))),
+         correct_item = ifelse(pick == correctItem, 1, 0),
+         pickTest = substr(pick, 4, length(pick)),
+         correct_target1 = ifelse(pickTest == target1, 1, 0),
+         correct_target2 = ifelse(pickTest == target2, 1, 0),
+         correct_target3 = ifelse(pickTest == target3, 1, 0))
+        
+
+
+write.csv(data, file="../data/pilot.data.csv")
+
+# data <- read_csv(file="../data/pilot.data.csv")
 ```
 
+```{r sanity checks}
+data %>%
+  filter(phase == 'training') %>%
+  group_by(workerid) %>%
+  summarise(correct = mean(correct_item))
+
+drop <- data %>%
+  filter(phase == 'training') %>%
+  group_by(workerid) %>%
+  summarise(correct = mean(correct_item)) %>%
+  filter(correct < 0.83) %>%
+  pull(workerid)
+
+data <- data %>%
+  filter(!workerid %in% drop)
+```
+
+```{r}
+data %>%
+  filter(phase == "test", distribution == "c(4, 2, 0)") %>%
+  group_by(pickTest) %>%
+  summarise(mean = mean(correct_target1))
+```
 # Do proportion of choices match the frequency in the distribution
 
 ```{r plot1}
+plot1 <- data %>%
+  filter(phase == 'test') %>%
+  group_by(distribution, workerid) %>%
+  summarise(correct = mean(correct_target1),
+            correct2 = mean(correct_target2),
+            correct3 = mean(correct_target3)) %>%
+  gather(item, prop_correct, -distribution, -workerid) %>%
+  group_by(distribution, item) %>%
+  multi_boot_standard(col = "prop_correct")
+    
+ggplot(plot1,
+       aes(x = item, y=mean, fill=item)) +
+  geom_bar(stat='identity') +
+  geom_linerange(aes(ymin = ci_lower, ymax = ci_upper)) +
+  facet_grid(~distribution) +
+  geom_hline(yintercept = 1/3, lty=2) +
+  ylim(0, 1) +
+  theme_few() 
+
 
 ```
 
 # Does the framing influence the match between choice and distribution 
 
 ```{r plot 2}
+plot2 <- data %>%
+  filter(phase == 'test') %>%
+  group_by(distribution, workerid, trialType) %>%
+  summarise(correct = mean(correct_target1),
+            correct2 = mean(correct_target2),
+            correct3 = mean(correct_target3)) %>%
+  gather(item, prop_correct, -distribution, -workerid, -trialType) %>%
+  group_by(distribution, trialType, item) %>%
+  multi_boot_standard(col = "prop_correct")
+    
+ggplot(plot2,
+       aes(x = item, y=mean, fill=item)) +
+  geom_bar(stat='identity') +
+  geom_linerange(aes(ymin = ci_lower, ymax = ci_upper)) +
+  facet_grid(trialType~distribution) +
+  geom_hline(yintercept = 1/3, lty=2) +
+  ylim(0, 1) +
+  theme_few() 
 
 ```
 
+# Comparing the last input with the picked object by distribution
+
+```{r plot 2}
+a <- data %>%
+  filter(slide == 6) %>%
+  select(workerid, pick) 
+
+b <- data %>%
+  filter(slide == "choice") %>%
+  select(workerid, distribution, pickTest, correct_target1)
+
+b$pickSlide6 = a$pick
+
+b <- b %>%
+  filter(distribution != "c(6, 0, 0)", correct_target1 == 1) %>%
+  arrange(distribution) %>%
+  group_by(distribution) %>%
+  summarise(n = length(distribution))
+
+# 30/59 trials picking the same category as the last input slide.
+# 24/33 for 4, 2, 0
+# 7/26 for 2, 2, 2
+
+```
