--- a/analysis/01_analysis.Rmd
+++ b/analysis/01_analysis.Rmd
@@ -76,22 +76,29 @@ data %>%
 ```{r plot1}
 plot1 <- data %>%
   filter(phase == 'test') %>%
-  group_by(distribution, target1, workerid) %>%
+  group_by(distribution, workerid) %>%
   summarise(correct = mean(correct_target1),
             correct2 = mean(correct_target2),
             correct3 = mean(correct_target3)) %>%
-  gather(item, prop_correct, -distribution, -workerid, -target1) %>%
-  group_by(distribution, target1, item) %>%
+  gather(item, prop_correct, -distribution, -workerid) %>%
+  group_by(distribution, item) %>%
   multi_boot_standard(col = "prop_correct")
-    
+
+
 ggplot(plot1,
        aes(x = item, y=mean, fill=item)) +
   geom_bar(stat='identity') +
-#  geom_linerange(aes(ymin = ci_lower, ymax = ci_upper)) +
-  facet_grid(target1~distribution) +
+  geom_linerange(aes(ymin = ci_lower, ymax = ci_upper)) +
+  scale_fill_solarized(name = "Chosen item",
+                       breaks = c("correct", "correct2", "correct3"),
+                       labels = c("most frequent", "second most frequent", "least frequent"))+
+  facet_grid(~distribution, 
+             labeller = as_labeller(c(`c(6, 0, 0)` = "Distribution\n(6-0-0)", `c(4, 2, 0)` = "Distribution\n(4-2-0)", `c(2, 2, 2)` = "Distribution\n(2-2-2)", preference = "preference", statistical = "statistical"))) +
   geom_hline(yintercept = 1/3, lty=2) +
   ylim(0, 1) +
-  theme_few() 
+  theme_few() +
+  theme(axis.text.x = element_blank(), axis.ticks.x = element_blank()) +
+  labs(x="", y= "proportion chosen")
 
 
 ```
@@ -135,10 +142,16 @@ ggplot(plot2,
        aes(x = item, y=mean, fill=item)) +
   geom_bar(stat='identity') +
   geom_linerange(aes(ymin = ci_lower, ymax = ci_upper)) +
-  facet_grid(trialType~distribution) +
+  scale_fill_solarized(name = "Chosen item",
+                       breaks = c("correct", "correct2", "correct3"),
+                       labels = c("most frequent", "second most frequent", "least frequent"))+
+  facet_grid(trialType~distribution, 
+             labeller = as_labeller(c(`c(6, 0, 0)` = "Distribution\n(6-0-0)", `c(4, 2, 0)` = "Distribution\n(4-2-0)", `c(2, 2, 2)` = "Distribution\n(2-2-2)", preference = "preference", statistical = "statistical"))) +
   geom_hline(yintercept = 1/3, lty=2) +
   ylim(0, 1) +
-  theme_few() 
+  theme_few() +
+  theme(axis.text.x = element_blank(), axis.ticks.x = element_blank()) +
+  labs(x="", y= "proportion chosen")
 
 ```
 
