--- a/analysis/01_analysis.Rmd
+++ b/analysis/01_analysis.Rmd
@@ -16,6 +16,27 @@ library(ggthemes)
 library(langcog)
 ```
 
+#Recency data
+```{r}
+files <- dir("../../recency_raw_data/production-results")
+
+raw_data <- data_frame()
+for (f in files) {
+  jf <- paste("../../recency_raw_data/production-results/",f,sep="")
+  jd <- fromJSON(paste(readLines(jf), collapse=""))
+  id <- as_data_frame(jd$answers$data$data) %>%
+    mutate(workerid = jd$WorkerId)
+  raw_data <- bind_rows(raw_data, id)
+}
+
+data <- raw_data %>%
+  mutate(distribution = as.character(distribution),
+         distribution = factor(distribution, levels = c("c(5, 1, 0)", "c(2, 2, 2)")))
+data$workerIp
+
+```
+
+#Pilot 1 data
 ```{r data preprocessing}
 # Data pre-processing
 
@@ -154,7 +175,7 @@ ggplot(plot1,
                        breaks = c("correct", "correct2", "correct3"),
                        labels = c("most frequent", "second most frequent", "least frequent"))+
   facet_grid(~distribution, 
-             labeller = as_labeller(c(`c(6, 0, 0)` = "Distribution\n(6-0-0)", `c(4, 2, 0)` = "Distribution\n(4-2-0)", `c(2, 2, 2)` = "Distribution\n(2-2-2)", preference = "preference", statistical = "statistical"))) +
+             labeller = as_labeller(c(`c(5, 1, 0)` = "Distribution\n(5-1-0)", `c(4, 2, 0)` = "Distribution\n(4-2-0)", `c(2, 2, 2)` = "Distribution\n(2-2-2)", preference = "preference", statistical = "statistical"))) +
   geom_hline(yintercept = 1/3, lty=2) +
   ylim(0, 1) +
   theme_few() +
