--- a/analysis/01_study1_adult.Rmd
+++ b/analysis/01_study1_adult.Rmd
@@ -189,7 +189,7 @@ summary(bm1)
 
 prior2 <- get_prior(correct_target1 ~ distribution_prop +
                       (distribution_prop | workerid) + (distribution_prop | agent),
-                    data = data_inf, family = bernoulli()) 
+                    data = data_inf, family = bernoulli())
 
 bm2 <- brm(correct_target1 ~ distribution_prop  +
                       (distribution_prop | workerid) + (distribution_prop | agent),
@@ -200,6 +200,9 @@ bm2 <- brm(correct_target1 ~ distribution_prop  +
           prior = prior2,
           iter = 100000)
 summary(bm2)
+
+saveRDS(bm1, "01_study1_adult_models/bm1.rds")
+saveRDS(bm2, "01_study1_adult_models/bm2.rds")
 
 bf_full_null <- bayes_factor(bm1, bm2, log = FALSE, maxiter = 5000)
 
