--- a/analysis/01_study2_adult.Rmd
+++ b/analysis/01_study2_adult.Rmd
@@ -34,6 +34,9 @@ data <- raw_data %>%
   mutate(distribution = as.character(distribution),
          distribution = ifelse(distribution == "2:0", "c(2, 1, 0)", distribution),
          distribution = factor(distribution, levels = c("c(6, 0, 0)", "c(4, 2, 0)", "c(2, 2, 2)", "c(3, 0, 0)", "c(1, 1, 1)", "c(2, 1, 0)")))
+
+write.csv(data, file="../data/01_study2_adult.data.csv")
+data <- read_csv(file="../data/01_study2_adult.data.csv")
 ```
 
 ```{r sanity checks, include=FALSE} 
