--- a/analysis/01_kids.Rmd
+++ b/analysis/01_kids.Rmd
@@ -15,9 +15,26 @@ library(dplyr)
 library(ggthemes)
 library(langcog)
 
+library(lsr)
+library(pwr)
+
 ```
 
 ```{r data pre-processing}
+
+files <- dir("../../kids_simple_4cat/")
+
+raw_data <- data_frame()
+for (f in files) {
+  jf <- paste("../../kids_simple_4cat/",f,sep="")
+  jd <- fromJSON(paste(readLines(jf), collapse=""))
+  id <- as_data_frame(jd$data$data)
+  raw_data <- bind_rows(raw_data, id)
+}
+
+data_4cat <- raw_data %>%
+  mutate(distribution = as.character(distribution),
+         distribution = factor(distribution, levels = c("c(6, 0, 0)", "c(4, 2, 0)", "c(2, 2, 2)")))
 
 files <- dir("../../kids_simple/")
 
@@ -29,9 +46,16 @@ for (f in files) {
   raw_data <- bind_rows(raw_data, id)
 }
 
-data <- raw_data %>%
+data_6cat <- raw_data %>%
   mutate(distribution = as.character(distribution),
-         distribution = factor(distribution, levels = c("c(6, 0, 0)", "c(4, 2, 0)", "c(2, 2, 2)")))
+         distribution = factor(distribution, levels = c("c(6, 0, 0)", "c(4, 2, 0)", "c(2, 2, 2)"))) %>%
+  filter(target1 != "furniture", target1 != "instruments")
+
+data <- bind_rows(data_4cat, data_6cat)
+
+write.csv(data, file="../data/kids_4cat_pilot.data.csv")
+
+data <- read_csv(file="../data/kids_4cat_pilot.data.csv")
 ```
 
 ```{r sanity checks}
@@ -50,8 +74,10 @@ drop <- data %>%
   filter(correct < 0.83) %>%
   pull(subid)
 
-data <- data %>%
-  filter(!subid %in% drop)
+data %>%
+  filter(!subid %in% drop) %>%
+  group_by(subage) %>%
+  summarise(n = length(unique(subid)))
 
 ```
 
@@ -164,4 +190,66 @@ ggplot(plot4,
   theme_few() +
   theme(axis.text.x = element_blank(), axis.ticks.x = element_blank()) +
   labs(x="", y= "proportion chosen")
+```
+
+```{r plot2, fig.width = 8, echo=FALSE, warning = FALSE}
+plot2 <- data %>%
+  filter(phase == 'test') %>%
+  group_by(distribution, subid, subage) %>%
+  summarise(correct = mean(correct_target1),
+            correct2 = mean(correct_target2),
+            correct3 = mean(correct_target3)) %>%
+  gather(item, prop_correct, -distribution, -subid, -subage) %>%
+  group_by(distribution, item, subage) %>%
+  multi_boot_standard(col = "prop_correct")
+
+ggplot(plot2,
+       aes(x = item, y=mean, fill=item)) +
+  geom_bar(stat='identity') +
+  geom_linerange(aes(ymin = ci_lower, ymax = ci_upper)) +
+  scale_fill_solarized(name = "Chosen item",
+                       breaks = c("correct", "correct2", "correct3"),
+                       labels = c("most frequent", "second most frequent", "least frequent"))+
+  facet_grid(distribution~subage, 
+             labeller = as_labeller(c(`c(6, 0, 0)` = "Distribution\n(6-0-0)", `c(4, 2, 0)` = "Distribution\n(4-2-0)", `c(2, 2, 2)` = "Distribution\n(2-2-2)", `2` = "2", `3` = "3", `4` = "4"))) +
+  geom_hline(yintercept = 1/3, lty=2) +
+  ylim(0, 1) +
+  theme_few() +
+  theme(axis.text.x = element_blank(), axis.ticks.x = element_blank()) +
+  labs(x="", y= "proportion chosen")
+```
+
+```{r plot5, echo=FALSE, warning = FALSE, cache = TRUE}
+
+plot5 <- data %>%
+  filter(phase == 'test') %>%
+  group_by(distribution, subid, target1) %>%
+  summarise(correct = mean(correct_target1)) %>%
+  gather(item, prop_correct, -distribution, -subid, -target1) %>%
+  group_by(distribution, item, target1) %>%
+  multi_boot_standard(col = "prop_correct")
+
+ggplot(plot5,
+       aes(x = target1, y=mean, fill=item)) +
+  geom_bar(stat='identity') +
+ # geom_linerange(aes(ymin = ci_lower, ymax = ci_upper)) +
+  scale_fill_solarized()+
+  guides(fill = F) +
+  geom_hline(yintercept = 1/3, lty=2) +
+  ylim(0, 1) +
+  theme_few() +
+  labs(x="category", y= "proportion chosen")
+```
+
+``` {r power analysis}
+power <- data %>%
+  filter(phase == 'test') %>%
+  group_by(subid) %>%
+  summarise(correct = mean(correct_target1))
+
+t.test(power$correct, mu = 1/3)
+
+cohensD(power$correct, mu = 1/3)
+
+pwr.t.test(d = 0.5127475, sig.level = 0.05, power = .8, type = c("one.sample"))
 ```
