data for different intros

--- a/analysis/01_study1_adult.Rmd
+++ b/analysis/01_study1_adult.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "DisCon Adult Study 1"
+title: "DisCon Adult Study 1 (Absolute and Relative Strength of Inputs)"
 output: html_document
 ---
 
