--- a/analysis/01_adult_speakerchange.Rmd
+++ b/analysis/01_adult_speakerchange.Rmd
@@ -4,25 +4,98 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE) #no code, no warning printed
+library(knitr)
+library(tidyverse)
+library(ggplot2)
+library(jsonlite)
+library(tidyr)
+library(stringr)
+library(dplyr)
+library(ggthemes)
+library(langcog)
 ```
 
-## R Markdown
+#Pilot 1 data
+```{r data preprocessing}
+# Data pre-processing
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+files <- dir("../../adult_600_speakerchange/sandbox-results/")
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+raw_data <- data_frame()
+for (f in files) {
+  jf <- paste("../../adult_600_speakerchange/sandbox-results/",f,sep="")
+  jd <- fromJSON(paste(readLines(jf), collapse=""))
+  id <- as_data_frame(jd$answers$data$data) %>%
+    mutate(workerid = jd$WorkerId)
+  raw_data <- bind_rows(raw_data, id)
+}
 
-```{r cars}
-summary(cars)
+data <- raw_data %>%
+  mutate(distribution = as.character(distribution),
+         distribution = ifelse(distribution == "2:0", "c(2, 1, 0)", distribution),
+         distribution = factor(distribution, levels = c("c(6, 0, 0)", "c(4, 2, 0)", "c(2, 2, 2)", "c(3, 0, 0)", "c(1, 1, 1)", "c(2, 1, 0)")))
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+data_ip <- data %>%
+  filter(phase == 'training') %>%
+  group_by(workerIp) %>%
+  summarise(correct = mean(correct_item))
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r sanity checks}
+data %>%
+  filter(phase == 'training') %>%
+  group_by(workerid) %>%
+  summarise(correct = mean(correct_item))
+
+drop <- data %>%
+  filter(phase == 'training') %>%
+  group_by(workerid) %>%
+  summarise(correct = mean(correct_item)) %>%
+  filter(correct < 0.83) %>%
+  pull(workerid)
+
+data <- data %>%
+  filter(!workerid %in% drop)
+```
+```{r}
+
+sample_size <- data %>%
+  distinct(workerid, .keep_all = TRUE)
+
+sample_size %>%
+ group_by(experiment) %>%
+ summarise(n = n())
+```
+
+
+```{r plot1}
+plot1 <- data %>%
+  filter(phase == 'test') %>%
+  group_by(distribution, workerid, speakerChange) %>%
+  summarise(correct = mean(correct_target1),
+            correct2 = mean(correct_target2),
+            correct3 = mean(correct_target3)) %>%
+  gather(item, prop_correct, -distribution, -workerid, -speakerChange) %>%
+  group_by(distribution, item, speakerChange) %>%
+  multi_boot_standard(col = "prop_correct")
+
+
+ggplot(plot1,
+       aes(x = item, y=mean, fill=item)) +
+  geom_bar(stat='identity') +
+  geom_linerange(aes(ymin = ci_lower, ymax = ci_upper)) +
+  scale_fill_solarized(name = "Chosen item",
+                       breaks = c("correct", "correct2", "correct3"),
+                       labels = c("most frequent", "second most frequent", "least frequent"))+
+  facet_grid(~speakerChange, 
+             labeller = as_labeller(c(change = "speaker change", same = "no change"))) +
+  geom_hline(yintercept = 1/3, lty=2) +
+  ylim(0, 1) +
+  theme_few() +
+  theme(axis.text.x = element_blank(), axis.ticks.x = element_blank()) +
+  labs(x="", y= "proportion chosen")
+
+```
